Grid layout was changet to flexbox

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,11 +1,14 @@
 button {
-    border: 0.5px solid #000000;
+    /* border: 0.5px solid #000000; */
+    border-radius: 24px;
     background-color: #E0E0E6;
-    font-size: 32px;
+    font-size: 1.8rem;
     color: rgb(0, 0, 0);
     font-family: inherit;
     cursor: pointer;
     outline: none;
+    width: 23%;
+    height: auto;
 }
 
 
@@ -31,5 +34,5 @@ button.actions:active {
 }
 
 .btn-key-0 {
-    grid-column: 1/3;
+   flex-grow: 2;
 }
