--- a/src/components/ButtonBox/ButtonBox.css
+++ b/src/components/ButtonBox/ButtonBox.css
@@ -1,7 +1,11 @@
 .buttonBox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
     width: 100%;
-    height: 80%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    height: 100%;
+    /* display: grid; */
+    /* grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr); */
 }
