--- a/src/components/Output/Output.css
+++ b/src/components/Output/Output.css
@@ -1,6 +1,7 @@
 .Output {
     width: 100%;
-    height: 110px;
+    height: 10vh;
+    border-radius: 16px;
     background-color: #1c191c;
 }
 
@@ -8,9 +9,10 @@ input {
     width: 100%;
     height: 100%;
     border: none;
+    border-radius: 16px;
     text-align: right;
     background: #1c191c;
     color: #ffffff;
-    font-size: 48px;
+    font-size: 3rem;
     user-select: none;
 }
