--- a/src/components/Wrapper/wrapper.css
+++ b/src/components/Wrapper/wrapper.css
@@ -1,5 +1,15 @@
 .wrapper {
-    width: 340px;
-    height: 540px;
-    background-color: #F0F2F8;
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: column;
+    gap: 16px;
+    margin: 0 auto;
+    margin-top: 8vh;
+    border-radius: 24px;
+    padding: 24px;
+    width: 30vh;
+    height: 50vh;
+    background-color: #0d0d0d;
+    min-width: 300px;
+    max-width: 500px;
 }
